--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,20 +8,18 @@
         <% if logged_in? %>
           <li><%= link_to "Users", customer_users_path %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false" >
               Account <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><%= link_to "Profile", customer_users_path(current_user) %></li>
+              <li><%= link_to "Settings", edit_customer_user_path(current_user) %></li>
               <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_sessions_path, method: :delete %>
-              </li>
+              <li><%= link_to "Log out", logout_sessions_path, method: :delete %></li>
             </ul>
-          </li>
+          </div>
         <% else %>
-          <li><%= link_to "Log in", sessions_login_path %></li>
+          <li><%= link_to "Log in", login_sessions_path %></li>
         <% end %>
       </ul>
     </nav>
