--- a/app/views/customer/users/_user.html.erb
+++ b/app/views/customer/users/_user.html.erb
@@ -1,8 +1,8 @@
 <li>
   <%= gravatar_for user, size: 50 %>
-  <%= link_to user.name, user %>
+  <%= link_to user.name, customer_users_path %>
   <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete,
+    | <%= link_to "delete", customer_users_path, method: :delete,
                                   data: { confirm: "You sure?" } %>
   <% end %>
 </li>
