--- a/app/views/customer/stores/_store.html.slim
+++ b/app/views/customer/stores/_store.html.slim
@@ -1,3 +1,5 @@
-li
-  = gravatar_for store, size: 50
-  = link_to store.name, customer_users_path
+.shadow.p-3.mb-5.bg-body.rounded
+  .container
+    .row
+      .col-sm-1 = gravatar_for store, size: 50
+      .col-sm-4.fs-1 = link_to store.name,  customer_store_products_path(store), class: 'no-decoration'
