--- a/app/views/customer/products/_product.html.slim
+++ b/app/views/customer/products/_product.html.slim
@@ -1,5 +1,5 @@
-.shadow.p-3.mb-5.bg-body.rounded
-  .container
+.container.d-flex.justify-content-center
+  .shadow.p-3.mb-5.bg-body.rounded.w-75.p-3
     .row
       .col-sm-1 = gravatar_for product, size: 50
       .col-sm-4
