--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-inverse
   .container-fluid
-    = link_to 'ELYSIA', root_path, id: 'logo'
+    h1 = link_to 'ELYSIA', root_path, id: 'logo', class: 'no-decoration'
     .collapse.navbar-collapse
     ul.nav.navbar-nav.justify-content-end
       li.nav-item = link_to "Home", root_path
