--- a/app/views/customer/products/_product.html.slim
+++ b/app/views/customer/products/_product.html.slim
@@ -2,8 +2,12 @@
   .shadow.p-3.mb-5.bg-body.rounded.w-75.p-3
     .row
       .col-sm-1 = gravatar_for product, size: 50
-      .col-sm-4
-        .fs-3 = link_to product.name
+      .col-sm-6
+        .fs-3 = link_to product.name, '#', class: 'no-decoration'
         .fs-4 = number_to_currency(product.price)
+      .col-sm-4
+        button.btn.btn-outline-primary
+          .fs-3 = fa_icon "shopping-cart", text: "Add To Cart", right: true
+
 
       /,  customer_store_products_path(store), class: 'no-decoration'
