--- a/app/views/customer/users/edit.html.erb
+++ b/app/views/customer/users/edit.html.erb
@@ -3,9 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: [:customer, @user], -> { where(:attibute => value)}
-    # Ex:- scope :active, -> {where(:active => true)} local: true) do |f| %>
-      <%= render 'shared/error_messages' %>
+    <%=form_with(model: [:customer, @user]) do |f| %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
