--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,6 +7,7 @@ nav.navbar.navbar-expand-lg.navbar-inverse
       li.nav-item = link_to  "Stores",  customer_stores_path
       li.nav-item = link_to "Help", help_path
       - if logged_in?
+        li.nav-item = link_to "Cart", customer_carts_path
         li.nav-item = link_to "Users", customer_users_path
         li.dropdown.nav-item
           a.dropdown-toggle.nav-item href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"
