--- a/app/views/customer/products/new.html.erb
+++ b/app/views/customer/products/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<% provide(:title, 'new product') %>
+<h1>New Product</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -19,10 +19,7 @@
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
 
-      <%= radio_button_tag(:role, "customer") %>
-      <%= label_tag(:role, "customer") %>
-      <%= radio_button_tag(:role, "seller") %>
-      <%= label_tag(:role, "seller") %>
+     
     <% end %>
   </div>
 </div>
