--- a/app/views/static_pages/show.js.erb
+++ b/app/views/static_pages/show.js.erb
@@ -1,1 +1,1 @@
-$("#search_result").html("<%= escape_javascript(render partial: 'index/show', locals: { courses: @courses } ) %>");
+$("#search_result").html("<%= escape_javascript(render partial: 'index/show', locals: { products: @products } ) %>");
