--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -12,6 +12,9 @@ nav.navbar.navbar-expand-lg.navbar-inverse
       
       - if logged_in?
         li.nav-item = link_to "Message", conversations_path
+
+        - if current_user.admin?
+          li.nav-item = link_to  "Edit",  edit_path
         - if current_user.role == "customer"
           li.nav-item = link_to  "Stores",  customer_stores_path
           li.nav-item = link_to  "Search",  search_path
