--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,14 @@
 .no-decoration:hover{
   text-decoration: underline;
 }
+
+// #map {
+//   height: 100%;
+// }
+
+/* Optional: Makes the sample page fill the window. */
+// html, body {
+//   height: 100%;
+//   margin: 0;
+//   padding: 0;
+// }
