--- a/app/views/customer/stores/index.html.slim
+++ b/app/views/customer/stores/index.html.slim
@@ -1,3 +1,7 @@
 h1 All Stores
 = render @stores
 = will_paginate @stores
+.container.d-flex.justify-content-center
+    .shadow.p-3.mb-5.bg-body.rounded.w-75.p-3
+      .row
+        #map
