--- a/app/views/customer/products/new.html.erb
+++ b/app/views/customer/products/new.html.erb
@@ -12,6 +12,9 @@
       <%= f.label :price %>
       <%= f.number_field :price, class: 'form-control' %>
 
+      <%= f.label :store_id %>
+      <%= f.text_field :store_id, class: 'form-control' %>
+
       <%= f.submit "Add product", class: "btn btn-primary" %>
     <% end %>
     
