change add store button

--- a/app/views/customer/products/new.html.erb
+++ b/app/views/customer/products/new.html.erb
@@ -13,7 +13,8 @@
       <%= f.number_field :price, class: 'form-control' %>
 
       <%= f.label :store_id %>
-      <%= f.text_field :store_id, class: 'form-control' %>
+      <%= collection_select(:store_name, :store_id, Store.all,:id, :name,{prompt: 'Select store'}, class: 'form-control') %>
+      
 
       <%= f.submit "Add product", class: "btn btn-primary" %>
     <% end %>
