--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -15,7 +15,7 @@ nav.navbar.navbar-expand-lg.navbar-inverse
 
         - if current_user.admin?
           li.nav-item = link_to  "Edit",  edit_path
-        - if current_user.role == "customer"
+        - if current_user.customer?
           li.nav-item = link_to  "Stores",  customer_stores_path
           li.nav-item = link_to  "Search",  search_path
           li.nav-item = link_to "Help", help_path
