--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,24 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
-  <%= link_to "Sign up now!", signup_customer_users_path, class: "btn btn-lg btn-primary" %>
+<!DOCTYPE html>
+<html>
+<head>
+   <link href="https://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+   <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+   <script src="https://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+</head>
+<div class="card" style="width: 100rem;">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7jzkOzKw38K7JQ-gNjGSV_bZ1ANiYLmnGfg&usqp=CAU" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">This is an app for online shopping.</h5>
+    <a href="https://www.instacart.com/" class="btn btn-primary">See instacart</a>
+  </div>
 </div>
 
+<div class="card" style="width: 100rem;">
+  <div class="card-body">
+    <h5 class="card-title">Here is an example of how to use online shopping apps:</h5>
+    <iframe width="980" height="315" src="https://www.youtube.com/embed/f_Zb3pNaJDg" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+
+
+</html>
