--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,24 +1,86 @@
 <!DOCTYPE html>
 <html>
+<%= javascript_pack_tag 'main' %>
 <head>
    <link href="https://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
    <script src="https://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-</head>
-<div class="card" style="width: 100rem;">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7jzkOzKw38K7JQ-gNjGSV_bZ1ANiYLmnGfg&usqp=CAU" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">This is an app for online shopping.</h5>
-    <a href="https://www.instacart.com/" class="btn btn-primary">See instacart</a>
-  </div>
-</div>
 
-<div class="card" style="width: 100rem;">
+
+</head>
+
+<body>  
+
+    <main>
+
+      <header style="background-color:rgba(40, 117, 194, 0.61);">
+        <h1>Elyssia App</h1>
+        <p>Welcome to our website!</p>
+      </header>
+
+      <section style="background-color:rgba(40, 194, 156, 0.61);">
+        <h2>📜 Introduction</h2>
+        <p>
+        <p>This is an app for online shopping and delivery.</p>
+      </p>
+
+        <p>
+          We have item search, address viewing via google map, admin editing products, user conversations etc.
+        </p>
+
+      </section>
+
+      <section class="light" style="background-color:rgba(191, 194, 40, 0.61);">
+        <h2 style="color:rgb(111, 0, 255);">Technical Skills Used</h2>
+
+        <p>
+          Ruby on Rails, PostgreSQL, javascript, html/css, bootstrap.
+        </p> 
+      </section>
+
+
+      <section style="background-color:rgba(189, 40, 194, 0.61);">
+        <div class="card" style="width: 100rem;">
   <div class="card-body">
     <h5 class="card-title">Here is an example of how to use online shopping apps:</h5>
     <iframe width="980" height="315" src="https://www.youtube.com/embed/f_Zb3pNaJDg" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
+        
+      </section>
+
+
+      <section style="background-color:rgba(40, 176, 194, 0.61);">
+        <p style="color:rgb(0, 255, 76);" >Contact Info:</p>
+        <address><a href="mailto:lingyuliu@brandeis.edu">Email</a><br></address>
+        
+        <a href="https://github.com/LingyuLiu11">Github</a><br>
+        
+      </section>
+
+      
+
+    </main>
+    
+    <script type="module" src="/main.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </body>
 
 
 </html>
