--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -14,6 +14,7 @@ nav.navbar.navbar-expand-lg.navbar-inverse
 
         - if current_user.admin?
           li.nav-item = link_to  "Edit",  edit_path
+          li.nav-item = link_to "Log out", logout_sessions_path, method: :delete
         - if current_user.customer?
           li.nav-item = link_to  "Stores",  customer_stores_path
           
